# telegram-rust-guess-bot

./: .env.example  .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  check-env.sh  check-messages.sh  deploy-bot.sh  deploy.sh  secure-data.sh
data/: seen_welcome.json  user_miss_streaks.json  user_start_attempts.json
messages/: ar.json  en.json  it.json  ru.json  zh.json
src/: lib.rs  main.rs
tests/: config_display.rs  decrement_sequence.rs  full_flow_reset.rs  game_restart_threshold.rs  lang_and_rand.rs  lang_detection.rs  messages_keys.rs  messages_load.rs
