[package]
name = "telegram-bot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
rand = "0.8.5"
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
